# RAGS-AI-APP

./: .gitignore  ADVANCED_FACE_DETECTION.md  AI_LEARNING_VOICE_FIXED.md  AI_RESPONSES_FIXED.md  ALL_21_FEATURES_COMPLETE.md  ANALYSIS_AND_IMPROVEMENTS.md  BACKGROUND_DEMO.sh  BACKGROUND_MONITORING_GUIDE.md  BROWSER_AUTOMATION_COMPLETE.md  BROWSER_CONTROL_PHASE1.md  BUGS_AND_ISSUES.md  CAMERA_SETUP_GUIDE.md  CAMERA_VISION_COMPLETE.md  CAMERA_VISION_E2E_TEST_RESULTS.md  CHATGPT_LEVEL_ENHANCEMENTS_COMPLETE.md  CODE_IMPROVEMENTS_SUMMARY.md  COMMANDS_REFERENCE.md  COMPLETE_CHECKLIST.md  COMPLETE_EVOLUTION_SYSTEM.md  COMPLETE_IMPLEMENTATION.md  COMPLETE_INTEGRATION_SUCCESS_REPORT.md  COMPLETE_REAL_TIME_WORKING_REPORT.md  COMPLETE_SETUP.md  COMPLETE_SETUP_GUIDE.md  COMPLETE_TASK_ANALYSIS.md  COMPLETE_TEST.sh  COMPLETION_CHECKLIST.md  COMPREHENSIVE_TESTING_SCRIPT.sh  CONTINUOUS_LISTENING_FIXED.md  CURRENT_STATUS.md  DEMO_REALISTIC_FACE.sh  DEMO_REAL_RAGS.sh  DOUBLE_VOICE_DESKTOP_FIXED.md  END_TO_END_TEST.sh  ENHANCED_COMPLETION_REPORT.md  ENHANCEMENTS_SUMMARY.md  ERRORS_FIXED.md  EVOLUTION_FEATURES_GUIDE.md  EVOLUTION_IMPLEMENTATION_STATUS.md  EVOLUTION_QUICK_START.md  (+65 more)
backend/: .env.example  Dockerfile  compile-new.sh  package-lock.json  package.json  test-axios-ollama.js  test-server.js  tsconfig.json
desktop/: EMOTION_API_GUIDE.md  NEO_EYES_COMPLETE.md  REAL_INTEGRATION.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
(+235 files in other folders)
